hphp/hack/test/typecheck/trait_abs_const.php.exp
File "trait_abs_const.php", line 4, characters 3-18:
Traits cannot have constants (Parsing[1002])
