hphp/hack/test/typecheck/trait_abs_const.php
<?hh

trait T {
  abstract const X;
}
